# aaa

./: README.md
AutoEscalator/: cmd.config
AutoEscalator/src/: animation_controller.cpp  animation_controller.h  building.cpp  building.h  config.h  data_recorder.cpp  data_recorder.h  dispatcher.cpp  dispatcher.h  elevator.cpp  elevator.h  energy_manager.cpp  energy_manager.h  help_system.cpp  help_system.h  main.cpp  maintenance_manager.cpp  maintenance_manager.h  monitor.cpp  monitor.h  monitor_display.cpp  monitor_display.h  performance.cpp  performance.h  simulator.cpp  simulator.h  utils.cpp  visualizer.cpp
ws/: cmd.config  requirements.txt
ws/backend/: main.py
ws/backend/algorithms/: astar.py  scheduler.py
ws/backend/models/: agv.py  map.py  task.py
ws/frontend/: index.html
ws/frontend/css/: style.css
ws/frontend/js/: main.js  map.js  websocket.js
迭代/AutoEscalator/: CMakeLists.txt
迭代/AutoEscalator--Bug修复/: cmd.config
迭代/AutoEscalator--Bug修复/app/: CMakeLists.txt
迭代/AutoEscalator--Bug修复/app/resources/: resources.qrc
迭代/AutoEscalator--Bug修复/app/src/common/: types.h
迭代/AutoEscalator--Bug修复/app/src/controller/: elevatorcontroller.cpp  elevatorcontroller.h
迭代/AutoEscalator--Bug修复/app/src/floor/: floorwidget.cpp  floorwidget.h
迭代/AutoEscalator--Bug修复/app/src/mainwindow/: mainwindow.cpp
迭代/AutoEscalator--Bug修复/app/src/settings/: settingsdialog.cpp  settingsdialog.h
迭代/AutoEscalator--Nice/app/src/controller/: elevatorcontroller.cpp  elevatorcontroller.h
迭代/AutoEscalator--Nice/app/src/statistics/: statisticsdialog.h
迭代/AutoEscalator--Nice2/app/src/controller/: elevatorcontroller.cpp
迭代/AutoEscalator--Nice2/app/src/floor/: floorwidget.cpp
迭代/AutoEscalator--Nice2/app/src/login/: loginwindow.cpp  loginwindow.h
迭代/AutoEscalator--Nice2/app/src/mainwindow/: mainwindow.cpp
迭代/AutoEscalator--Nice2/app/src/settings/: settingsdialog.cpp
迭代/AutoEscalator--Nice2/app/src/statistics/: statisticsdialog.cpp
迭代/AutoEscalator--UI半救/app/src/common/: types.h
迭代/AutoEscalator--UI半救/app/src/controller/: elevatorcontroller.cpp
迭代/AutoEscalator--UI半救/app/src/elevator/: elevatorwidget.cpp  (+1 more)
迭代/AutoEscalator--UI显示二代/app/: CMakeLists.txt
迭代/AutoEscalator--UI显示二代/app/include/core/: Elevator.h  ElevatorDispatcher.h
迭代/AutoEscalator--UI显示二代/app/include/ui/: ElevatorConfigDialog.h  ElevatorWidget.h  StatusMonitorDialog.h
迭代/AutoEscalator--UI显示二代/app/include/utils/: Config.h
迭代/AutoEscalator--UI显示二代/app/src/: main.cpp
迭代/AutoEscalator--UI显示二代/app/src/core/: Elevator.cpp  ElevatorDispatcher.cpp
迭代/AutoEscalator--UI显示二代/app/src/ui/: ElevatorConfigDialog.cpp  MainWindow.cpp
迭代/AutoEscalator--UI显示二代/app/src/utils/: Config.cpp
迭代/AutoEscalator--UI显示版本/: CMakeLists.txt  condig.cmd  note.txt
迭代/AutoEscalator--UI显示版本/app/: CMakeLists.txt
迭代/AutoEscalator--UI显示版本/app/src/: main.cpp
迭代/AutoEscalator--UI显示版本/app/src/core/: Elevator.cpp  Elevator.h  ElevatorSystem.cpp  ElevatorSystem.h  EmergencyHandler.cpp  EmergencyHandler.h  PassengerManager.cpp  PassengerManager.h  Types.h
迭代/AutoEscalator--UI显示版本/app/src/ui/: ElevatorWidget.cpp  ElevatorWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h
迭代/AutoEscalator--UI显示终止/: CMakeLists.txt  note.txt
迭代/AutoEscalator--UI显示终止/resources/: resources.qrc
迭代/AutoEscalator--UI显示终止/resources/styles/: main.qss
迭代/AutoEscalator--改进/: CMakeLists.txt
迭代/AutoEscalator--楼层状态显示问题/app/src/: main.cpp
迭代/AutoEscalator/src/: building.cpp  building.h  config.cpp  logger.cpp  logger.h  main.cpp  passenger.cpp  passenger.h  simulator.cpp  simulator.h  statistics.cpp  statistics.h  utils.h  visualizer.h
(+42 files in other folders)
